# agent_forge

./: .gitignore  Agent Forge - Complete Learning Guide (From Scratch).txt  Agent Forge - Comprehensive Design Document.txt  Agent_Forge_Business_Overview_Speech.txt  Eärendil_Business_Overview_Speech.txt  HOSTING.md  MCP_vs_current_text_to_sql_architecture_comparison.txt  README.md  REVENUE_AND_RETURNS_ONBOARDING.txt  SCIL_VERIFICATION_GUIDE.txt  SCIL_technical_document.md  application onboarding example.txt  component architecture and technology guide.txt  docker-compose.yml  market_intelligence_example_queries.txt  onboarding walkthrough - document export.txt  technical design document.txt
backend/: .dockerignore  .env.example  AGENTIC_SQL_PATTERNS_DESIGN.txt  Dockerfile  SECURITY.md  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 106c23bffdaf_add_output_schema_and_output_key_to_.py  1c434e403b77_add_self_healing_and_scratchpad_tool_types.py  527eb7d28697_backfill_config_audit_log_workspace_id.py  52e3d6262e1b_add_prompt_eval_runs.py  60a63e1accd8_add_agent_and_skill_collaborators.py  638c521a72bf_add_image_gen_tool_type.py  6a08ac63aeaa_add_users_table.py  6d5d5f21bae4_add_transcript_column_to_invocation_log.py  7b2e4f91a3c8_add_durable_execution_columns.py  9e65c5d7c0cd_init_agent_forge_schema.py  9f1a2c7d4e6b_add_guardrail_events.py  a1b4c9e60d72_add_temporal_reservations.py  a1c3e6f9d204_add_scil_eval_framework.py  a1c3e9d4f210_add_developer_role_and_debugging.py  a7c5e3f1d926_widen_audit_entity_types.py  a9e21c6b4f7d_add_mysql_query_tool_type.py  b25478ebfb41_enterprise_workspaces_user_roles_audit_.py  b3f7c9d2e841_add_hallucination_unresolved_event_type.py  b6f3e08c2a51_add_soeid_to_users.py  b7d2f4a8e315_add_tool_call_log_call_index.py  c2b8e4a97f13_add_policy_events_and_hash_chain_to_.py  c4e8f1a2b930_add_rca_events_and_tool_io_capture.py  c7d4a1f9e6b2_add_data_entities.py  c9a4f1e08b3d_add_scil_entity_memory.py  d3a7f2c19e4b_add_access_policies.py  d4f7a2e819c6_add_tool_lifecycle_versioning_rbac_.py  d8e1b4c7f302_add_model_text_event_type.py  e2f9a6c1b8d4_add_scil_tables.py  e8a1c5f930b7_add_workspace_config.py  (+3 more)
backend/app/: audit_hash.py  auth_users.py  config.py  db.py  embeddings.py  event_chain.py  generated_files_auth.py  logging_hooks.py  main.py  principal.py  rate_limit.py  rate_limit_backends.py  retention.py  tenancy.py
backend/mcp_servers/: _chart_utils.py  _db.py  _http_retry.py  _schema_context.py  _signed_urls.py  _theme.py  _watermark.py  chart_server.py  crypto_server.py  document_export_server.py  forex_metals_server.py  mutual_fund_server.py  slide_reporting_server.py  stocks_server.py  weather_server.py
backend/policies/: credit_facility_query_access.rego  credit_facility_query_access_test.rego  credit_facility_search_access.rego  credit_facility_search_access_test.rego
backend/scripts/: audit_fix_agents.py  cleanup_verification_artifacts.py  consolidate_orchestrators.py  disable_planning.py  enable_scil.py  eval_gate.py  migrate_gemini_model.py  migrate_nl2sql_orchestrator_instructions.py  migrate_policy_to_opa.py  publish_agent.py  refresh_peer_clause.py  rename_agent.py  republish_stale_model_agents.py  run_temporal_worker.py  seed_agentic_sql_patterns.py  seed_chart_tool.py  seed_demo_data.py  seed_eval_cases.py  seed_market_agents.py  seed_nl2sql_orchestrator.py  seed_reliability_demo.py  seed_reporting_specialist.py  seed_slide_reporting_agent.py  seed_studybuddy_agents.py
backend/tests/: conftest.py  test_agent_collaborators.py  test_agent_runtime.py  test_agents_api.py  test_audit_lineage.py  test_chart_server.py  test_data_query_tool.py  test_guardrails.py  test_model_cascading.py  test_multi_tenancy.py  test_opa_policy.py  test_playground.py  test_policy_engine.py  test_replay.py  test_scil.py  test_scil_correction.py  test_scil_entities.py  test_scil_hallucination.py  test_scil_p4.py  test_skills_api.py  test_slide_reporting.py  test_span_enrichment.py  test_templating.py  test_temporal_workflow.py  test_tool_lifecycle.py  test_tool_registry.py  test_tools_api.py  test_transfer_hop_limit.py
(+246 files in other folders)
