[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Only `app` is ever imported as an installed package. mcp_servers/*.py run
# as standalone subprocess scripts (see mcp_servers/_db.py's docstring —
# they load .env directly and aren't on the `app` package's path), alembic/
# is driven by the `alembic` CLI reading alembic.ini (not imported), and
# generated_files/generated_images are runtime output dirs, not code.
# Needed as of setuptools 83: its flat-layout auto-discovery got stricter
# and started rejecting this repo's multiple top-level directories outright
# ("Multiple top-level packages discovered in a flat-layout") where the
# older bundled setuptools silently picked one.
include = ["app*"]

[project]
name = "agent-forge"
version = "0.1.0"
description = "UI-driven platform for composing and running Google ADK agents from Postgres-backed config"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    # Pinned exact (not a >=/< range): 2.5.0 renamed/dropped the McpToolset
    # alias this app imports (app/tool_registry/mcp_tool.py) in favor of
    # MCPToolset-only, which only surfaced as a Railway build-time crash
    # since that fresh install resolved to 2.5.0 while local dev stayed on
    # whatever was installed when 2.4.0 was current. Bump deliberately, not
    # by drift.
    #
    # The "[mcp]" extra matters just as much as the pin: google-adk's
    # tools/mcp_tool/__init__.py wraps its McpToolset/MCPToolset imports in
    # a bare `except ImportError: pass`, so if the optional mcp>=1.24,<2 +
    # anyio>=4.9,<5 deps that extra pulls in aren't installed, McpToolset
    # silently doesn't exist at all instead of raising anything obviously
    # related to "mcp" or "anyio" missing. Local dev worked without it only
    # because the `mcp` package happened to already be installed from
    # unrelated earlier work in this venv — a fresh install (Railway) has
    # nothing to fall back on.
    "google-adk[mcp]==2.4.0",
    # Claude support: litellm is what google.adk.models.lite_llm.LiteLlm needs
    # to route an agent's model= at Anthropic instead of Gemini (see
    # agent_runtime/builder.py); anthropic is the official SDK used directly
    # by scil/hallucination.py's groundedness judge. Version range matches
    # what google-adk 2.4.0's own (much heavier) "extensions" extra pins
    # (litellm>=1.84, no published upper bound), without pulling in that
    # extra's unrelated deps (crewai, kubernetes, docker, ...). Ceiling here
    # is one past the exact version (1.89.6) smoke-tested against this app's
    # Claude-routed agent path (see Phase 1 of the hosting/BYOK plan).
    "litellm>=1.84,<1.90",
    "anthropic>=0.78.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pgvector>=0.3.0",
    "reportlab>=4.0.0",
    "openpyxl>=3.1.0",
    "pymysql>=1.1.0",
    "dbutils>=3.1.0",
    "sqlglot>=25.0.0",
    "python-pptx>=1.0.0",
    "matplotlib>=3.9.0",
    "pandas>=2.2.0",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "motor>=3.5.0",
    "jsonschema>=4.0.0",
    # Pinned explicitly (not just left as litellm/uvicorn transitives) so a
    # fresh install doesn't silently resolve back to a version with a known
    # CVE — pip-audit flagged aiohttp 3.13.4 (pulled in by litellm) and
    # click 8.1.8 (pulled in by uvicorn) before this floor was added.
    "aiohttp>=3.14.1",
    "click>=8.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
